--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,12 +1,9 @@
 on: [push]
 
 jobs:
-  hello_job_work:
+  build:
     runs-on: ubuntu-latest
-    name: A job to say hello
     steps:
-      - uses: actions/checkout@v4
-      - id: foo
-        uses: Chandolkar001/test_github_actions@d9601574bc2594847854d21c3e39189277998f27
+      - uses: Chandolkar001/test_github_actions@d9601574bc2594847854d21c3e39189277998f27
         with:
           who-to-greet: 'Tron'
