--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,8 +7,8 @@ jobs:
       - name: Start docker action
         id: hello  
         uses: Chandolkar001/test_github_actions@b0251889775b9e39335d0ade33370765de016abe
-        with:
-          who-to-greet: 'Shreyas'
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+      #   with:
+      #     who-to-greet: 'Shreyas'
+      # - name: Get the output time
+      #   run: echo "The time was ${{ steps.hello.outputs.time }}"
         
