--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,9 +8,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Start docker
         id: hello  
-        uses: Chandolkar001/test_github_actions@d71ab38b18902d60b502f09a63296dc83b0b2dfd
+        uses: Chandolkar001/test_github_actions@dec6db8223cb444de8262275f7704058a09c4ff1
         with:
-          who-to-greet: 'Shreyas'
+          who-to-greet: 'file.txt'
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
         
