--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout files
+      - name: Checkout file
         uses: actions/checkout@v3
       - name: Start docker image
         id: hello  
