commit from ubuntu

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,6 @@ jobs:
         id: hello  
         uses: Chandolkar001/test_github_actions@30ee7a03d5680946d5daae74719eda399d6f2827
         with:
-          who-to-greet: 'file.txt'
+          who-to-greet: 'app.py'
 
         
