--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Start docker action
         id: hello  
-        uses: Chandolkar001/test_github_actions@4f68ce8cf36b161c2cc2db631ff6bd85c577e33d
+        uses: Chandolkar001/test_github_actions@82897de6db86323404d330ea769db70e4571a2ed
+        with:
+          who-to-greet: 'secret scan'
 
         
