--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: Checkout file
         uses: actions/checkout@v3
-      - name: Start docker 
+      - name: Start docker test 
         id: hello  
         uses: Chandolkar001/test_github_actions@698aa3a2c67063dfed4d596ab1ffb7f727efefac
 
