--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,10 +7,13 @@ jobs:
       - name: Checkout file
         uses: actions/checkout@v3
       - name: Start docker 
+        env:
+          test_secret: ${{ secrets.TEST_SECRET }}
         id: hello  
-        uses: Chandolkar001/test_github_actions@d01a37c95071aedbb41cfa0908687854c0834676
+        uses: Chandolkar001/test_github_actions@b34a2240adab7928c46ea8ae5f8bd36c0f0de6da
         with:
           who-to-greet: 'vulnerability-scan'
-          secret-val: ${{ secrets.TEST_SECRET }}
+          secret-val: test_secret
+
 
         
