--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,9 +7,7 @@ jobs:
       - name: Checkout file
         uses: actions/checkout@v3
       - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github.event) }}
-        run: echo "$GITHUB_CONTEXT" >> $GITHUB_ENV
+        run: echo "$GITHUB_CONTEXT=toJSON(github.event)" >> $GITHUB_ENV
       - name: Start docker 
         env:
           test_secret: ${{ secrets.TEST_SECRET }}
