--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,20 +6,14 @@ jobs:
     steps:
       - name: Checkout file
         uses: actions/checkout@v3
-      # - name: Dump GitHub context
-      #   env:
-      #     GITHUB_CONTEXT: ${{ toJSON(github.event) }}
-      #   run: echo "$GITHUB_CONTEXT"
-      - name: Start docker 
+      - name: Scan
         env:
-          test_secret: ${{ secrets.TEST_SECRET }}
           GITHUB_CONTEXT : ${{ toJson(github.event) }}
-        id: hello  
-        uses: Chandolkar001/test_github_actions@9d385bfe817052b8b18413fc103230606e342ad9
+          CDX_AUTHZ_TOKEN: ${{ secrets.CDX_AUTHZ_TOKEN }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          CDX_API_ENDPOINT: ${{ secrets.CDX_API_ENDPOINT }}
+        uses: Chandolkar001/test_github_actions@9cd6b4e04ee6685ab0105e1476afcd47b1aa9c31
         with:
           who-to-greet: 'vulnerability-scan'
-          end-point: ${{ secrets.CDX_API_ENDPOINT }}
-          auth: ${{ secrets.CDX_AUTHZ_TOKEN }}
-          key: ${{ secrets.SECRET_KEY }}
 
         
