--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,12 +7,13 @@ jobs:
       - name: Checkout file
         uses: actions/checkout@v3
       - name: main 
-        uses: Chandolkar001/test_github_actions@7956eb1a35c632e8f40efa954a034e658da1bc82
+        uses: Chandolkar001/test_github_actions@924ad88d681d7bc9ae45561106c6dd9cdcb21ecb
         with:
           who-to-greet: 'secret-scan'
           github-context : ${{ toJson(github.event) }}
           auth-token: ${{ secrets.AUTH_TOKEN }}
           api-endpoint: ${{ secrets.API_ENDPOINT }}
+          debug: 'true'
 
 
         
