--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,3 +4,7 @@ steps:
 
   - name: 'us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.2'
     args: ['/entrypoint.sh']
+  options:
+    automapSubstitutions: true
+  substitutions:
+    _USER: "Google Cloud"
