--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['pull', 'us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3']
-
-- name: 'us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3'
-  args: ['/entrypoint.sh']
-options:
-  automapSubstitutions: true
-  substitutionOption: ALLOW_LOOSE
+  entrypoint: 'bash'
+  args: [ "-c", 'docker run -v /var/run/docker.sock:/var/run/docker.sock us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3' ]
+ 
