--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,4 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
-  # args: [ "-c", 'docker run -v /var/run/docker.sock:/var/run/docker.sock us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3' ]
-  args:
-  - '-c'
-  - |
-    docker run \
-      -v /var/run/docker.sock:/var/run/docker.sock \
-      $(for var in $$(env | cut -d= -f1); do echo "-e $$var"; done) \
-      us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3
+  args: [ "-c", 'docker run -v /var/run/docker.sock:/var/run/docker.sock us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3' ]
