--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: 'bash'
   args: [ "-c", 'docker run -v /workspace:/workspace -v /var/run/docker.sock:/var/run/docker.sock us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3 --debug True --scanType secret-scan --service github' ]
   env:
-  - '_PUSH_NAME=$_PUSH_NAME'
+  - '_URL=$_URL'
 - name: 'gcr.io/cloud-builders/docker'
   args: ['ps']
 options:
