--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,14 +3,21 @@ steps:
   script: |
     #!/usr/bin/env bash
     env > env_params.txt
-    echo $_API_ENDPOINT
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
+  secretEnv: [
+    "config",
+    "jsonKey"
+  ]
   args: [ "-c", 'docker run --env-file env_params.txt -e API_ENDPOINT=helo -e AUTH_TOKEN=hello -v /workspace:/workspace -v /var/run/docker.sock:/var/run/docker.sock us-central1-docker.pkg.dev/cloudanix-qa-303120/codescan/cloud-test:0.3 --debug True --scanType secret-scan --service github' ]
 - name: 'gcr.io/cloud-builders/docker'
   args: ['ps']
-substitutions:
-  _MY_GITHUB_SECRET: $${_API_ENDPOINT}
+availableSecrets:
+  secretManager:
+    - versionName: projects/1004/secrets/config/versions/1
+      env: 'config'
+    - versionName: projects/1004/secrets/jsonKey/versions/1
+      env: 'jsonKey'
 options:
   automapSubstitutions: true
   substitutionOption: 'ALLOW_LOOSE'
